# kurenai_tetris

./: 1.js  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: field.rs  lib.rs  models.rs  shared.rs  state.rs  tetromino.rs
src/models/: block.rs  field.rs  tetromino.rs  tetromino_factory.rs
src/models/tetromino/: i.rs  j.rs  l.rs  o.rs  s.rs  t.rs  z.rs
src/tetromino/: i.rs  j.rs  o.rs  t.rs  z.rs
static/: index.html
