[package]
name = "kurenai_tetrist"
description = "An example game of kurenai."
version = "0.1.0"
authors = ["yu-hasebe <yu.has128@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
derive-new = "0.5.8"
kurenai = "0.5.1"
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
